--- a/test/fixtures/feature_flags.yml
+++ b/test/fixtures/feature_flags.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  enabled: false
+  name: feature_one
+  state: disabled
 
 two:
   name: MyString
-  enabled: false
+  state: enabled
