--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,11 @@
 development:
   adapter: async
+  url: <%= ENV.fetch("REDIS_URL", "redis://127.0.0.1:6379/0") %>
 
 test:
   adapter: test
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") %>
+  url: <%= ENV.fetch("REDIS_URL", "redis://127.0.0.1:6379/0") %>
   channel_prefix: aedg_explorer_production
