--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,6 +1,7 @@
 development:
   adapter: async
   url: <%= ENV.fetch("REDIS_URL", "redis://127.0.0.1:6379/0") %>
+  channel_prefix: aedg_explorer_development
 
 test:
   adapter: test
