--- a/test/fixtures/yearly_generations.yml
+++ b/test/fixtures/yearly_generations.yml
@@ -1,14 +1,14 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  grid: one
+  aea_plant_id: 1
   net_generation_mwh: 5000
   fuel_type_code: 'NG'
   fuel_type_name: 'Natural Gas'
   year: 2020
 
 two:
-  grid: two
+  aea_plant_id: 2
   net_generation_mwh: 1500
   fuel_type_code: 'DFO'
   fuel_type_name: 'Distillate Fuel Oil'
