--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,5 +2,13 @@ inherit_from: .rubocop_todo.yml
 
 plugins: rubocop-rails
 
+AllCops:
+  Exclude:
+    - 'db/migrate/**/*'
+    - 'db/schema.rb'    
+    - 'node_modules/**/*'
+    - 'vendor/**/*'
+    - 'bin/**/*'
+    
 Style/FrozenStringLiteralComment:
   Enabled: false
