--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,3 +44,20 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  notify_failure:
+      runs-on: ubuntu-latest
+      needs: [docker]
+      if: failure() && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+      steps:
+        - uses: mattermost/action-mattermost-notify@master
+          with:
+            MATTERMOST_WEBHOOK_URL: ${{ secrets.MM_WEBHOOK_URL }}
+            MATTERMOST_ICON_URL: https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678069-sign-error-512.png
+            TEXT: |
+              :warning: **Docker Build Failed**
+              **Repo:** ${{ github.repository }}
+              **Ref:** ${{ github.ref_name }}
+              **Author:** ${{ github.actor }}
+              
+              [View Logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
