--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -99,17 +99,17 @@ jobs:
           path: ${{ github.workspace }}/tmp/screenshots
           if-no-files-found: ignore
           
-  notify_failure:
+  notify_status:
       runs-on: ubuntu-latest
       needs: [scan_ruby, scan_js, lint, test]
-      if: failure() && github.ref == 'refs/heads/main'
+      if: always() && github.ref == 'refs/heads/main'
       steps:
         - uses: mattermost/action-mattermost-notify@master
           with:
             MATTERMOST_WEBHOOK_URL: ${{ secrets.MM_WEBHOOK_URL }}
-            MATTERMOST_ICON_URL: https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678069-sign-error-512.png
+            MATTERMOST_ICON_URL: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
             TEXT: |
-              :warning: **CI Failed**
+              ${{ contains(toJSON(needs), 'failure') && ':x: **CI Failed on Push to Main**' || ':white_check_mark: **CI Passed on Push to Main**' }}
               **Repo:** ${{ github.repository }}
               **Author:** ${{ github.actor }}
               
