--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -45,17 +45,17 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  notify_failure:
+  notify_status:
       runs-on: ubuntu-latest
       needs: [docker]
-      if: failure() && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+      if: always() && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
       steps:
         - uses: mattermost/action-mattermost-notify@master
           with:
             MATTERMOST_WEBHOOK_URL: ${{ secrets.MM_WEBHOOK_URL }}
-            MATTERMOST_ICON_URL: https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678069-sign-error-512.png
+            MATTERMOST_ICON_URL: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
             TEXT: |
-              :warning: **Docker Build Failed**
+              ${{ needs.docker.result == 'success' && ':white_check_mark: **Docker Build Succeeded on Push to Main**' || ':x: **Docker Build Failed on Push to Main**' }}
               **Repo:** ${{ github.repository }}
               **Ref:** ${{ github.ref_name }}
               **Author:** ${{ github.actor }}
