--- a/.github/workflows/pr-review-requested.yml
+++ b/.github/workflows/pr-review-requested.yml
@@ -1,11 +1,11 @@
-name: Notify Mattermost on Ready PR
+name: Notify Mattermost on Review Requested
 
 on:
   pull_request:
     types: [review_requested]
 
 jobs:
-  notify:
+  notify-reviewer:
     runs-on: ubuntu-latest
     steps:
       - name: Send Alert to Mattermost
@@ -16,8 +16,9 @@ jobs:
           TEXT: |
             :dart: **Review Requested**
             
-            **Repository:** ${{ github.repository }}
+            **Repo:** ${{ github.repository }}
             **PR:** #${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}
-            **Author:** ${{ github.actor }}
+            **Requested By:** ${{ github.actor }}
+            **Reviewer:** @${{ github.event.requested_reviewer.login }}
             
             [Review Now](${{ github.event.pull_request.html_url }})
