--- a/.github/workflows/pr-review-requested.yml
+++ b/.github/workflows/pr-review-requested.yml
@@ -14,7 +14,7 @@ jobs:
           MATTERMOST_WEBHOOK_URL: ${{ secrets.MM_WEBHOOK_URL }}
           MATTERMOST_ICON_URL: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
           TEXT: |
-            :dart: **Review Requested**
+            :eyes: **Review Requested**
             
             **Repo:** ${{ github.repository }}
             **PR:** #${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}
