--- a/test/fixtures/reporting_entities.yml
+++ b/test/fixtures/reporting_entities.yml
@@ -6,11 +6,11 @@
 #
 one:
   name: 'Test Utility One'
-  year: 2020
+  most_recent_year: 2020
   grid: one
 
 two:
   name: 'Test Utility Two'
-  year: 2021
+  most_recent_year: 2021
   grid: two
 
