--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,14 +102,14 @@ jobs:
   notify_status:
       runs-on: ubuntu-latest
       needs: [scan_ruby, scan_js, lint, test]
-      if: always() && github.ref == 'refs/heads/main'
+      if: failure() && github.ref == 'refs/heads/main'
       steps:
         - uses: mattermost/action-mattermost-notify@master
           with:
             MATTERMOST_WEBHOOK_URL: ${{ secrets.MM_WEBHOOK_URL }}
             MATTERMOST_ICON_URL: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
             TEXT: |
-              ${{ contains(toJSON(needs), 'failure') && ':x: **CI Failed on Push to Main**' || ':white_check_mark: **CI Passed on Push to Main**' }}
+              :x: **CI Failed on Push to Main**
               **Repo:** ${{ github.repository }}
               **Author:** ${{ github.actor }}
               
