--- a/test/fixtures/monthly_generations.yml
+++ b/test/fixtures/monthly_generations.yml
@@ -2,7 +2,7 @@
 
 one:
   aea_plant_id: 1
-  net_generation_mwh: 111.1
+  generation_mwh: 111.1
   fuel_type_code: 'NG'
   fuel_type_name: 'Natural Gas'
   year: 2021
@@ -10,7 +10,7 @@ one:
 
 two: 
   aea_plant_id: 2
-  net_generation_mwh: 222.2
+  generation_mwh: 222.2
   fuel_type_code: 'NG'
   fuel_type_name: 'Natural Gas'
   year: 2022
