--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -111,11 +111,12 @@ jobs:
 
   notify-on-failure:
     needs: [merge]
-    if: always() # this will be changed to failure() I just want to test that it works
-    uses: acep-devops/workflows/.github/workflows/mattermost-notify.yml@nicole/adjust-mattermost-message
+    if: failure()
+    uses: acep-devops/workflows/.github/workflows/mattermost-notify.yml@main
     with:
       preset: "status"
       job_status: ${{ needs.merge.result }}
-      title: "Docker Deploy on Push to Main or Release"
+      title: >-
+        Docker Deploy on ${{ github.ref_type == 'tag' && 'Release' || 'Branch' }} (${{ github.ref_name }})
     secrets:
       MM_WEBHOOK_URL: ${{ secrets.MM_WEBHOOK_URL }}
