--- a/.github/workflows/pr-notifications.yml
+++ b/.github/workflows/pr-notifications.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   notify-on-request:
     if: github.event.action == 'review_requested'
-    uses: acep-devops/workflows/.github/workflows/mattermost-notify.yml@nicole/adjust-mattermost-message
+    uses: acep-devops/workflows/.github/workflows/mattermost-notify.yml@main
     with:
       preset: "review_request"
     secrets:
@@ -18,7 +18,7 @@ jobs:
 
   notify-on-submit:
     if: github.event.action == 'submitted'
-    uses: acep-devops/workflows/.github/workflows/mattermost-notify.yml@nicole/adjust-mattermost-message
+    uses: acep-devops/workflows/.github/workflows/mattermost-notify.yml@main
     with:
       preset: "review_decision"
     secrets:
