--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -111,7 +111,7 @@ jobs:
 
   notify-on-failure:
     needs: [merge]
-    if: failure()
+    if: ! success()
     uses: acep-devops/workflows/.github/workflows/mattermost-notify.yml@main
     with:
       preset: "status"
